--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "@types/pg": "^8.11.10",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "pg": "^8.13.1",
+    "pg-pool": "^3.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
