--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.1",
     "pg": "^8.13.1",
     "pg-pool": "^3.7.0",
+    "sequelize": "^6.37.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
